Restructure directory. Add subtitle.

--- a/es6.html
+++ b/es6.html
@@ -7,16 +7,20 @@
   <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="style.css">
-  <title>MMA Cardstack - Vanilla JavaScript</title>
+  <title>MMA Cardstack - Built using ES6</title>
 </head>
 <body>
   <main>
     <div class="container__card">
-      <h1>MMA Cardstack</h1>
+      <header>
+        <h1>MMA Cardstack</h1>
+        <p class="subtitle">Built using JavaScipt ES6</p>
+      </header>
       <section class="card-stack"></section>
     </div>
   </main>
   <!-- Vanialla JavaScript -->
-  <script src="javascript.js"></script>
+  <script src="scripts/data.js"></script>
+  <script src="scripts/es6.js"></script>
 </body>
 </html>
