Setup index page

--- a/es6.html
+++ b/es6.html
@@ -10,7 +10,7 @@
   <title>MMA Cardstack - Built using ES6</title>
 </head>
 <body>
-  <main>
+  <main class="main">
     <div class="container__card">
       <header>
         <h1>MMA Cardstack</h1>
