--- a/vue.html
+++ b/vue.html
@@ -11,7 +11,7 @@
   <title>MMA Cardstack - Built using Vue</title>
 </head>
 <body>
-  <main id="app">
+  <main id="app" class="main">
     <div class="container__card">
       <header>
         <h1>MMA Cardstack</h1>
