Add back button

--- a/es6.html
+++ b/es6.html
@@ -13,6 +13,9 @@
   <main class="main">
     <div class="container__card">
       <header>
+        <a href="index.html" class="back">
+          <i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+        </a>
         <h1>MMA Cardstack</h1>
         <p class="subtitle">Built using JavaScipt ES6</p>
       </header>
