--- a/vue.html
+++ b/vue.html
@@ -11,9 +11,13 @@
   <title>MMA Cardstack - Built using Vue</title>
 </head>
 <body>
+
   <main id="app" class="main">
     <div class="container__card">
       <header>
+        <a href="index.html" class="back">
+          <i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+        </a>
         <h1>MMA Cardstack</h1>
         <p class="subtitle">Built using Vue</p>
       </header>
